Fixing issue where draggable items jump great distances; Replacing 'let' with 'var'

--- a/interactions/schedule01/schedule01.css
+++ b/interactions/schedule01/schedule01.css
@@ -30,7 +30,4 @@
     padding-right: 5px;
 }
 
-.dropzone-container {
-
-}
 
